--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/2.服务器规则.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/2.服务器规则.md
@@ -52,7 +52,6 @@ permalink: /ZakoZakoCraft/terms/
 
 服务器若发生意外情况导致数据丢失（表现为玩家背包物品丢失、世界建筑丢失、插件bug导致的物品丢失等），且服务器管理部未在群聊内事先通知玩家的，玩家在提供有效证据证明自身游戏成果丢失的前提下，有权向服务器管理部提出合理赔偿请求。对于不合理的赔偿请求，服务器管理部有权拒绝。
 
-
 ## 第四条 数据收集与隐私保护
 
 ### 数据收集条款
@@ -81,7 +80,6 @@ permalink: /ZakoZakoCraft/terms/
 
 本服务器为公益性质，资助行为完全基于自愿原则。捐赠玩家将在群聊和游戏内获得"赞助者"称号，该称号不附带任何特殊权限，仅作为对服务器支持者的感谢。
 
-
 ## 第六条 附则
 
 - 本规则未尽事宜，管理组将秉持公平原则处理
@@ -89,6 +87,10 @@ permalink: /ZakoZakoCraft/terms/
 - 规则修订后将在服务器群组及官网进行公示
 
 ---
+
+::: warning 规则重要性
+请所有玩家仔细阅读并遵守服务器规则，共同维护良好的游戏环境。
+:::
 
 *最后更新日期：2025-09-07*  
 *本文件最终解释权归服务器管理部所有*
