--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/1.加入服务器.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/1.加入服务器.md
@@ -30,7 +30,7 @@ permalink: /ZakoZakoCraft/join/
 
 6. 登录与改密
 
-   使用命令 /login 初始密码 登录账户。登录后，请立即按照邮件中的指引修改初始密码，防止遗忘密码。
+   使用命令 `/login 初始密码` 登录账户。登录后，请立即按照邮件中的指引修改初始密码，防止遗忘密码。
 
 7. 开始游戏
 
@@ -42,33 +42,48 @@ permalink: /ZakoZakoCraft/join/
 
 ## Q&A常见问题
 
-1. Q：**审核文档是必须填写的吗？**
-  
-   A：不是，加入机制有`审核制`和`邀请制`，邀请者需要对被邀请者所做出的不正当行为负责
+::: details Q：审核文档是必须填写的吗？
 
-2. Q：**客户端中有什么内容?**
-    
-   A：包含生电全家桶，元素周期表，各种优化，以及提升游戏体验，与服务器功能联动的模组(非必装)
-   
-3. Q：**优先与备用路线有什么区别?**
-    
-   A：优先路线延迟更低，负载能力更强，不过有少部分地区无法使用(正常现象)
-   
-4. Q：**用于绑定的邮箱能使用其他邮箱吗?**
-    
-   A：不行，强制使用`数字QQ邮箱`，目的是更好的追踪玩家的行为(例如查熊)，以及防止恶意机器人账号
+A：不是，加入机制有`审核制`和`邀请制`，邀请者需要对被邀请者所做出的不正当行为负责
 
-5. Q：**绑定时不小心输入了错误的的邮箱怎么办?**
-    
-   A：退出服务器等待10分钟再重试即可，服务器会自动注销未注册成功的账号
-   
-5. Q：**忘记密码了怎么办?**
-    
-   A：使用绑定的邮箱，按照`输入错误密码`后的指示进行重置密码即可
-   
-6. Q：**我想更换绑定的邮箱该如何做?**
-    
-   A：根据指示，注销账账号，再重新绑定新的QQ邮箱即可(游戏数据不会删除)
-   
-   
-> 其它疑问请在聊群中询问
+:::
+
+::: details Q：客户端中有什么内容?
+
+A：包含生电全家桶，元素周期表，各种优化，以及提升游戏体验，与服务器功能联动的模组(非必装)
+
+:::
+
+::: details Q：优先与备用路线有什么区别?
+
+A：优先路线延迟更低，负载能力更强，不过有少部分地区无法使用(正常现象)
+
+:::
+
+::: details Q：用于绑定的邮箱能使用其他邮箱吗?
+
+A：不行，强制使用`数字QQ邮箱`，目的是更好的追踪玩家的行为(例如查熊)，以及防止恶意机器人账号
+
+:::
+
+::: details Q：绑定时不小心输入了错误的的邮箱怎么办?
+
+A：退出服务器等待10分钟再重试即可，服务器会自动注销未注册成功的账号
+
+:::
+
+::: details Q：忘记密码了怎么办?
+
+A：使用绑定的邮箱，按照`输入错误密码`后的指示进行重置密码即可
+
+:::
+
+::: details Q：我想更换绑定的邮箱该如何做?
+
+A：根据指示，注销账账号，再重新绑定新的QQ邮箱即可(游戏数据不会删除)
+
+:::
+
+::: tip 其它疑问
+如有其他疑问请在群聊中询问
+:::
