--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/2.服务器规则.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/2.服务器规则.md
@@ -3,9 +3,6 @@ title: 服务器规则
 createTime: 2025-09-07
 permalink: /ZakoZakoCraft/terms/
 ---
-
-# 服务器使用条款与规则
-
 ## 第一条 行为准则
 
 服务器尊重各位玩家的游玩自由，不会主动干涉玩家的正常游玩行为。但如发生以下任一行为，服务器管理部将依据本规则进行处理。
@@ -89,8 +86,8 @@ permalink: /ZakoZakoCraft/terms/
 ---
 
 ::: warning 规则重要性
-请所有玩家仔细阅读并遵守服务器规则，共同维护良好的游戏环境。
+- 请所有玩家仔细阅读并遵守服务器规则，共同维护良好的游戏环境。
+- 该文件全服生效(包括QQ交流群)。
 :::
 
-*最后更新日期：2025-09-07*  
-*本文件最终解释权归服务器管理部所有*
+*本文件最终解释权归服务器管理组所有*
