--- a/docs/notes/1.ZakoZakoCraft/2.休闲生存服/2.经济功能.md
+++ b/docs/notes/1.ZakoZakoCraft/2.休闲生存服/2.经济功能.md
@@ -6,10 +6,8 @@ permalink: /ZakoZakoCraft/function/economy/
 
 ## 经济系统功能总览
 
-::: info
-
+::: tip 指令参数说明
 以下指令参数 \<> 表示必填项，[] 表示选填项。
-
 :::
 
 | 类别 | 功能 | 指令 | 说明 |
@@ -25,6 +23,12 @@ permalink: /ZakoZakoCraft/function/economy/
 
 ## 注意事项
 
+::: warning 重要提醒
 - 禁止利用漏洞、恶意压价
 - 交易请仔细确认物品与金额
 - 纠纷请及时联系管理员
+:::
+
+::: info 经济系统理念
+经济系统旨在促进玩家之间的互动与交易，营造活跃的游戏经济环境。
+:::
