--- a/docs/notes/1.ZakoZakoCraft/2.休闲生存服/3.装饰功能.md
+++ b/docs/notes/1.ZakoZakoCraft/2.休闲生存服/3.装饰功能.md
@@ -6,10 +6,8 @@ permalink: /ZakoZakoCraft/function/decoration/
 
 ## 装饰系统功能总览
 
-::: info
-
+::: tip 指令参数说明
 以下指令参数 \<> 表示必填项，[] 表示选填项。
-
 :::
 
 | 类别 | 功能 | 指令/触发 | 补充触发 | 说明 |
@@ -29,5 +27,11 @@ permalink: /ZakoZakoCraft/function/decoration/
 
 ## 注意事项
 
+::: warning 使用规范
 - 禁止使用冒犯性称号或文字
 - 个性化内容不得影响他人游戏体验
+:::
+
+::: tip 装饰系统理念
+装饰系统旨在让玩家能够更好地表达个性，创造独特的游戏体验。
+:::
