--- a/docs/notes/1.ZakoZakoCraft/2.休闲生存服/4.实用功能.md
+++ b/docs/notes/1.ZakoZakoCraft/2.休闲生存服/4.实用功能.md
@@ -6,10 +6,8 @@ permalink: /ZakoZakoCraft/function/services/
 
 ## 实用功能总览
 
-::: info
-
+::: tip 指令参数说明
 以下指令参数 \<> 表示必填项，[] 表示选填项。
-
 :::
 
 | 类别 | 功能 | 指令/获取方式 | 说明 |
@@ -25,5 +23,11 @@ permalink: /ZakoZakoCraft/function/services/
 
 ## 注意事项
 
+::: warning 安全提醒
 - 飞行注意能量剩余，避免高空坠落
 - 工具箱权限需购买
+:::
+
+::: info 功能设计理念
+实用功能旨在提升玩家的游戏体验，让日常游玩更加便捷舒适。
+:::
