--- a/docs/notes/1.ZakoZakoCraft/2.休闲生存服/5.特色配方.md
+++ b/docs/notes/1.ZakoZakoCraft/2.休闲生存服/5.特色配方.md
@@ -3,16 +3,19 @@ title: 特色配方
 createTime: 2025/09/07 14:49:48
 permalink: /ZakoZakoCraft/function/CustomRecipes/
 ---
-<details>
-<summary>服务器菜单</summary>
+
+::: tip 特色配方介绍
+服务器提供多种特色合成配方，让您的游戏体验更加丰富便捷。
+:::
+
+::: details 服务器菜单
 
 > EMMM...这玩意除了基岩版会有人用吗？
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/1.png)
-</details>
+:::
 
-<details>
-<summary>锁链盔甲</summary>
+::: details 锁链盔甲
 
 > 感觉比铁套还贵！为了什么？情怀吗？
 
@@ -20,49 +23,42 @@ permalink: /ZakoZakoCraft/function/CustomRecipes/
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/3.png)
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/4.png)
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/5.png)
-</details>
+:::
 
-<details>
-<summary>火药块</summary>
+::: details 火药块
 
 > 用于更好的存储火药，提升容器利用率
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/6.png)
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/7.png)
-</details>
+:::
 
-<details>
-<summary>命名牌</summary>
+::: details 命名牌
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/8.png)
-</details>
+:::
 
-<details>
-<summary>鞘翅</summary>
+::: details 鞘翅
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/9.png)
-</details>
+:::
 
-<details>
-<summary>三叉戟</summary>
+::: details 三叉戟
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/10.png)
-</details>
+:::
 
-<details>
-<summary>附魔金苹果</summary>
+::: details 附魔金苹果
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/11.png)
-</details>
+:::
 
-<details>
-<summary>蜘蛛网</summary>
+::: details 蜘蛛网
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/12.png)
-</details>
+:::
 
-<details>
-<summary>矿车类</summary>
+::: details 矿车类
 
 > 这下终于不用累死人了...
 
@@ -70,34 +66,34 @@ permalink: /ZakoZakoCraft/function/CustomRecipes/
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/14.png)
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/15.png)
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/16.png)
-</details>
+:::
 
-<details>
-<summary>发射器</summary>
+::: details 发射器
 
 > 让红石玩家最蛋疼的配方，现在舒服了~！！！
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/17.png)
-</details>
+:::
 
-<details>
-<summary>钟</summary>
+::: details 钟
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/18.png)
-</details>
+:::
 
-<details>
-<summary>隐形展示框</summary>
+::: details 隐形展示框
 
 > 只有放入物品才会隐藏边框（防止你找不到放哪了）
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/19.png)
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/20.png)
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/21.png)
-</details>
+:::
 
-<details>
-<summary>黏液球</summary>
+::: details 黏液球
 
 ![图片](/assets/ZakoZakoCraft/function/CustomRecipes/22.png)
-</details>
+:::
+
+::: warning 注意事项
+- 特色配方仅在本服务器生效
+:::
