分离常见问题

--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/1.加入服务器.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/1.加入服务器.md
@@ -16,7 +16,7 @@ permalink: /ZakoZakoCraft/join/
 
    提交问卷后，请耐心等待审核。管理员通常会在2-6小时内审核并批准入群。群文件中包含服务器地址、客户端下载链接等重要资源，请务必下载查看。
 
-3. 安装客户端(可选)
+3. 安装客户端（可选）
 
    您可以选择使用官方原版客户端或下载群内提供的整合包。整合包已预装优化模组并兼容反作弊插件，能提升游戏体验并确保与服务器的兼容性。
 
@@ -40,50 +40,6 @@ permalink: /ZakoZakoCraft/join/
 
 ---
 
-## Q&A常见问题
-
-::: details Q：审核文档是必须填写的吗？
-
-A：不是，加入机制有`审核制`和`邀请制`，邀请者需要对被邀请者所做出的不正当行为负责
-
-:::
-
-::: details Q：客户端中有什么内容?
-
-A：包含生电全家桶，元素周期表，各种优化，以及提升游戏体验，与服务器功能联动的模组(非必装)
-
-:::
-
-::: details Q：优先与备用路线有什么区别?
-
-A：优先路线延迟更低，负载能力更强，不过有少部分地区无法使用(正常现象)
-
-:::
-
-::: details Q：用于绑定的邮箱能使用其他邮箱吗?
-
-A：不行，强制使用`数字QQ邮箱`，目的是更好的追踪玩家的行为(例如查熊)，以及防止恶意机器人账号
-
-:::
-
-::: details Q：绑定时不小心输入了错误的的邮箱怎么办?
-
-A：退出服务器等待10分钟再重试即可，服务器会自动注销未注册成功的账号
-
-:::
-
-::: details Q：忘记密码了怎么办?
-
-A：使用绑定的邮箱，按照`输入错误密码`后的指示进行重置密码即可
-
-:::
-
-::: details Q：我想更换绑定的邮箱该如何做?
-
-A：根据指示，注销账账号，再重新绑定新的QQ邮箱即可(游戏数据不会删除)
-
-:::
-
-::: tip 其它疑问
-如有其他疑问请在群聊中询问
+::: tip 提示
+如需了解更多常见问题，请查看 [常见问题](./3.常见问题.md)
 :::
