--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/2.服务器规则.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/2.服务器规则.md
@@ -90,4 +90,8 @@ permalink: /ZakoZakoCraft/terms/
 - 该文件全服生效(包括QQ交流群)。
 :::
 
+::: tip 尊重与理解
+由于服主一人承担运维、网络、开发、管理等职位，完全出于热爱而非盈利运营本服务器，因此不论在任何场合，都需要给予服主最基本的尊重，并对服主工作给予理解和支持，这是作为一位有素养的玩家应具备的基本品质。
+:::
+
 *本文件最终解释权归服务器管理组所有*
