更新了常见问题 FAQ

--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/3.常见问题.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/3.常见问题.md
@@ -3,14 +3,11 @@ title: 常见问题
 createTime: 2025-09-07
 permalink: /ZakoZakoCraft/faq/
 ---
-
-## 常见问题解答
-
 ::: warning 重要提醒
 服主并非您的私人助理，没有义务逐一解答所有问题，请优先查阅本文档寻找答案。服主通常不会直接回应游戏内的"服主为什么"、"服主过来一下"等简单询问。遇到问题时，请先尝试自行解决，或向其他玩家请教是否遇到过类似情况。只有在确实无法解决的情况下，才向服主寻求帮助。
 :::
 
-### 注册与登录
+## 注册与登录
 
 ::: details Q：审核文档是必须填写的吗？
 
@@ -60,7 +57,7 @@ A：可以，一个QQ邮箱可以能绑定3个游戏ID。
 
 :::
 
-### 生存服
+## 生存服
 
 ::: details Q：生存服如何获取金币？
 
