--- a/docs/notes/1.ZakoZakoCraft/2.休闲生存服/4.实用功能.md
+++ b/docs/notes/1.ZakoZakoCraft/2.休闲生存服/4.实用功能.md
@@ -12,14 +12,11 @@ permalink: /ZakoZakoCraft/function/services/
 
 | 类别 | 功能 | 指令/获取方式 | 说明 |
 |------|------|---------------|------|
-| 基础服务 | 新闻指南 | `/news` | 含完整规则，新玩家必读 |
+| 基础服务 | 帮助指南 | 菜单 | 访问当前网页，含完整规则，新玩家必读 |
 | 基础服务 | 查询模式 | `/co i` | 查看方块操作记录，解决纠纷专用 |
 | 飞行与经验 | 能量飞行 | `/flyc` | 用经验或金币兑换飞行时间 |
-| 飞行与经验 | 自动续费 | `/autorecharge exp/money` | 飞行能量自动补充 |
-| 飞行与经验 | 经验提取 | 潜行+空瓶对附魔台右键 | 经验存入瓶子，随时使用，来一发? |
 | 工具与配方 | 便携工具箱 | 系统商店购买权限 | 含小创世神、便携工作台、镜像仿制 |
 | 工具与配方 | 特殊配方 | 无指令 | 服务器独家合成配方，仅本服生效 |
-| 工具与配方 | 更好的书架 | 右键书架 | 4X9格，支持纸/书/成书/书与笔/附魔书 |
 
 ## 注意事项
 
