--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/4.名人堂.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/4.名人堂.md
@@ -1,1 +1,22 @@
+---
+title: 服务器名人堂
+createTime: 2025-09-07
+permalink: /ZakoZakoCraft/Contributors/
+---
+
+::: tip 提示
+此页收录了服务器的贡献者以及服内知名人士。是因为他们，让服务器得以更好的发展，感谢以下人员或组织做出的卓越贡献！
+(更新存在一定的延迟，如有疑问请在群内询问)
+:::
+
+### 贡献者 （时间顺序）
+| 贡献者 | 贡献 | 附件 | 留言 |
+|---------|---------|---------|---------|
+| ZXBHELLO | 服务器服主 | 承担了服务器主要资金、运维、开发、管理 | 目前服务器就我一个管理，为爱发电 |
+| 糖君 | 服务器顾问 | 核心遇到问题了抓着他问就对了 | 暂无 |
+| Pine | 建议提出/改进玩法 | 另一个公益服的服主，经常与ZXBHELLO探讨问题 | 暂无 |
+| 水人 | 资金赞助9R | 原YMY难民，目前带领许多玩家移民至了杂鱼服 | 暂无 |
+
+
+
 
