Add metadata and content to 封神榜.md
Added metadata and introductory content to the封神榜.md file.

--- a/docs/notes/1.ZakoZakoCraft/1.从此处开始/5.封神榜.md
+++ b/docs/notes/1.ZakoZakoCraft/1.从此处开始/5.封神榜.md
@@ -1,1 +1,12 @@
+---
+title: 服务器封神榜
+createTime: 2025-09-07
+permalink: /ZakoZakoCraft/Punishment/
+---
 
+::: tip 提示
+此页收录了在服务器内或服务器聊群中犯下严重错误并被管理员处罚的玩家，以及处罚的原因。
+(更新存在一定的延迟，如有疑问请在群内询问)
+:::
+
+***待更新***
