--- a/docs/ZakoZakoCraft/2.休闲生存服/5.特色配方.md
+++ b/docs/ZakoZakoCraft/2.休闲生存服/5.特色配方.md
@@ -8,7 +8,34 @@ permalink: /ZakoZakoCraft/function/CustomRecipes/
 服务器提供多种特色合成配方，让您的游戏体验更加丰富便捷。
 :::
 
-![图片](/assets/ZakoZakoCraft/function/CustomRecipes.png)
+### 查阅方式：
+
+- 在ZakoZakoCraft菜单中点击`特色配方`
+- 输入命令 `/custom_recipe` 
+
+![图片](/assets/ZakoZakoCraft/CustomRecipes.png)
+
+# 特色配方列表
+
+
+- 三叉戟
+- TNT矿车
+- 运输矿车
+- 动力矿车
+- 漏斗矿车
+- 火药
+- 火药块
+- 隐形物品展示框
+- 隐形荧光物品展示框
+- 命名牌
+- 钟
+- 发射器
+- 粘液球
+- 附魔金苹果
+- 鞘翅
+- 湿海绵
+- 龙息
+- 皮革
 
 ::: warning 注意事项
 - 特色配方仅在本服务器生效
