--- a/docs/Carpet/1.原版Carpet/指令.md
+++ b/docs/Carpet/1.原版Carpet/指令.md
@@ -16,104 +16,127 @@ Carpet模组的主要命令，用于查看和修改规则。
 
 #### 用法
 ```
-/carpet [规则名] [值]
+/carpet                           # 显示当前Carpet版本和非原版规则列表
+/carpet list                      # 列出所有可用的Carpet规则
+/carpet list [category]           # 列出指定分类中的所有规则
+/carpet [rule] [value]            # 设置指定规则为指定值
+/carpet setDefault [rule] [value] # 将规则的默认值设置为指定值
+/carpet removeDefault [rule]      # 移除规则的自定义默认配置，恢复为原版默认值
+/carpet list defaults             # 列出当前世界存储在carpet.conf中的默认配置
 ```
 
-#### 示例
-```
-/carpet movableBlockEntities true
-/carpet hopperCounters true
-```
-
-### /script
-脚本命令，用于运行或管理 Carpet 脚本。
-
-#### 用法
-```
-/script [选项] [参数]
-```
-
-## 调试与监控命令
-
-### /log
-日志命令，用于实时监控游戏状态。
-
-#### 功能
-- 监控生物生成
-- 监控实体行为
-- 监控玩家操作
-- 监控红石活动
-
-#### 用法
-```
-/log [选项]
-```
+## 核心功能命令
 
 ### /tick
-游戏刻命令，用于控制游戏时间流逝速度。
-
-#### 功能
-- 加速游戏时间
-- 暂停游戏
-- 查看TPS信息
+控制游戏时钟的命令，可以改变时间流逝速度。
 
 #### 用法
 ```
-/tick [选项]
+/tick health [ticks]              # 监控游戏性能，默认监控100 ticks (5秒)
+/tick entities [ticks]            # 显示CPU时间和计数最多的10个实体
+/tick freeze                      # 冻结游戏，停止实体处理、世界时钟、方块更新和红石更新
+/tick step [ticks]                # 在冻结状态下推进指定数量的游戏刻
+/tick rate [tps]                  # 更改游戏运行速率，默认值为20.0
+/tick warp [ticks] [cmd]          # 以尽可能快的速度运行游戏指定的ticks数
+/tick superHot                    # 启用Super Hot模式，只有在玩家移动时时间才前进
 ```
 
-### /counter
-计数器命令，用于统计和监控各种数值。
-
-#### 功能
-- 统计特定事件发生次数
-- 监控资源收集情况
-- 跟踪玩家活动数据
+### /log
+切换各种Carpet日志记录器，信息显示在不同的UI位置。
 
 #### 用法
 ```
-/counter [选项]
+/log                              # 列出所有日志选项
+/log clear                        # 取消订阅所有日志
+/log counter [color]              # 订阅指定颜色的计数器日志
+/log fallingBlocks [brief/full]   # 记录下落方块的位置历史
+/log mobcaps [dimension/dynamic]  # 订阅指定维度的生物上限日志
+/log packets                      # 订阅数据包日志
+/log pathfinding [2/5/10]         # 订阅寻路日志
+/log projectiles [brief/full]     # 记录抛射物的位置历史
+/log tnt [brief/full]             # 记录TNT爆炸的详细信息
+/log tps                          # 订阅TPS和MSPT日志
 ```
-
-## 实用工具命令
 
 ### /player
-假人命令，用于管理和控制假人玩家。
-
-#### 功能
-- 创建和移除假人
-- 控制假人行为
-- 设置假人权限
+创建和控制假玩家，这些假玩家的行为几乎与真实玩家完全一致。
 
 #### 用法
 ```
-/player [假人名] [操作]
+/player <name> spawn              # 在当前位置生成指定名称的玩家
+/player <name> attack <mode>      # 玩家执行左键操作
+/player <name> use <mode>         # 玩家执行右键操作
+/player <name> mount              # 玩家骑乘附近的可骑乘实体
+/player <name> dismount           # 玩家取消骑乘
+/player <name> drop               # 玩家丢弃当前手持物品
+/player <name> dropStack          # 玩家丢弃整组物品
+/player <name> jump               # 玩家跳跃
+/player <name> kill               # 杀死玩家
+/player <name> look <direction>   # 玩家朝向指定方向
+/player <name> move <direction>   # 玩家向指定方向移动
+/player <your name> shadow        # 用假玩家替换你自己
+/player <name> sneak              # 玩家潜行
+/player <name> unsneak            # 玩家取消潜行
+/player <name> sprint             # 玩家冲刺
+/player <name> unsprint           # 玩家取消冲刺
+/player <name> stop               # 玩家停止移动并取消所有动作
+/player <name> swapHands          # 玩家交换主手和副手物品
 ```
 
-### /spawn
-生成命令，用于控制实体生成。
+## 工具类命令
 
-#### 功能
-- 生成特定实体
-- 控制生成条件
-- 设置生成参数
+### /distance
+计算两点之间的距离。
 
 #### 用法
 ```
-/spawn [实体类型] [数量] [位置]
+/distance from [start] to [end]   # 返回指定坐标之间的球面、圆柱和曼哈顿距离
+/distance from [start]            # 记住玩家的起始坐标
+/distance to [end]                # 计算到目标位置的距离
+```
+
+### /draw
+用方块构建简单的形状。
+
+#### 用法
+```
+/draw sphere [center] [radius] [block]                    # 用指定方块在指定中心坐标周围制作指定半径的球体
+/draw sphere [center] [radius] [block] replace [block/tag] # 用指定方块制作球体，但只替换指定方块/标签的方块
+```
+
+### /info
+获取方块的有用信息。
+
+#### 用法
+```
+/info block [coordinate]          # 获取指定坐标方块的信息
+/info block [coordinate] grep     # 获取指定坐标方块的特定信息
+```
+
+### /perimeterinfo
+获取坐标周围区域的各种信息。
+
+#### 用法
+```
+/perimeterinfo coordinate         # 返回指定坐标周围128格半径内的潜在生成空间
+/perimeterinfo coordinate [mob]   # 返回指定坐标周围128格半径内的潜在生成空间和指定生物的潜在生成空间
 ```
 
 ### /profile
-性能分析命令，用于分析游戏性能。
-
-#### 功能
-- 分析实体性能
-- 分析区块性能
-- 分析玩家性能
+监控游戏性能。
 
 #### 用法
 ```
-/profile [选项]
+/profile health [ticks]           # 监控游戏性能
+/profile entities [ticks]         # 显示实体的CPU时间和计数
+```
+
+### /script
+Scarpet脚本命令。
+
+#### 用法
+```
+/script [options] [parameters]    # 运行或管理Scarpet脚本
 ```
 
 ## 参考资料
