Update documentation for Carpet and MCMMO guides
Revised descriptions and command explanations in Carpet documentation for clarity. Adjusted the placement and wording of disclaimers in both Carpet and MCMMO README files to improve consistency. Enhanced formatting in MCMMO player guide by closing info blocks for passive abilities.

--- a/docs/Carpet/1.原版Carpet/规则分类.md
+++ b/docs/Carpet/1.原版Carpet/规则分类.md
@@ -125,14 +125,14 @@ Carpet规则按照功能领域分为多个类别，包括但不限于：
 扩展命令功能的规则。
 
 ### commandPlayer
-启用[player](file:///D:/Github/Website/node_modules/.pnpm/@types+node@22.10.10/node_modules/@types/node/stream.d.ts#L19-L19)命令。
+启用假玩家/机器人命令。
 
 **应用场景：**
 - 控制假玩家行为
 - 模拟真实玩家操作
 
 ### commandLog
-启用[log](file:///D:/Github/Website/node_modules/.pnpm/@types+node@22.10.10/node_modules/@types/node/stream.d.ts#L19-L19)命令。
+启用日志显示命令。
 
 **应用场景：**
 - 实时监控服务器状态
