Update docs navigation and mod/plugin guides
Refined navbar icons and structure in VuePress config. Improved clarity and consistency in Carpet and MCMMO mod/plugin documentation, including usage instructions and reference links. Enhanced nav.md with more accurate descriptions and added configuration/template card links.

--- a/docs/Carpet/1.原版Carpet/基础介绍.md
+++ b/docs/Carpet/1.原版Carpet/基础介绍.md
@@ -7,11 +7,11 @@ createTime: 2025/11/04 00:32:24
 
 # Carpet基础介绍
 
-Carpet Mod是一个为原版Minecraft设计的功能强大的模组，它允许玩家从技术角度完全控制游戏。通过精心设计的改动，它消除了游戏中一些烦人的问题，并提供了一些原版缺少的内容，填补了原版游戏功能的空白[^1]。
+Carpet Mod是一个为原版Minecraft设计的功能强大的模组，它允许玩家从技术角度完全控制游戏。通过精心设计的改动，它消除了游戏中一些烦人的问题，并提供了一些原版缺少的内容，填补了原版游戏功能的空白。
 
 ## Carpet的起源
 
-Carpet模组最初由gnembon开发，基于Fabric模组框架。它最初的设计理念是允许玩家放置地毯来获取游戏信息，因此得名"Carpet"。随着版本更新，Carpet已经发展成为一个功能丰富的技术模组[^2]。
+Carpet模组最初由gnembon开发，基于Fabric模组框架。它最初的设计理念是允许玩家放置地毯来获取游戏信息，因此得名"Carpet"。随着版本更新，Carpet已经发展成为一个功能丰富的技术模组。
 
 ## Carpet的核心功能
 
@@ -56,12 +56,12 @@ Carpet模组需要Fabric作为支持环境。安装步骤如下：
 ## Carpet与其他模组的关系
 
 ::: warning 兼容性注意
-需要注意的是，在Fabric环境中，Carpet模组会与OptiFabric发生冲突（仅为部分版本）。根据GitHub Issue的作者原话，主要是由于OptiFine的更新导致的冲突，OptiFabric会对冲突进行修复。在1.19.2版本下运行正常[^1]。
+需要注意的是，在Fabric环境中，Carpet模组会与OptiFabric发生冲突（仅为部分版本）。根据GitHub Issue的作者原话，主要是由于OptiFine的更新导致的冲突，OptiFabric会对冲突进行修复。在1.19.2版本下运行正常。
 :::
 
 ## 参考资料
 
 ::: info 相关链接
-[^1]: https://www.mcmod.cn/class/2361.html
-[^2]: https://github.com/gnembon/fabric-carpet
+- [McMod Carpet模组页面](https://www.mcmod.cn/class/2361.html)
+- [Carpet GitHub仓库](https://github.com/gnembon/fabric-carpet)
 :::
