Add custom navigation page and update docs
Introduced a new NavPage Vue component and supporting data/configuration for a custom navigation page. Updated VuePress client and config files to register the component and support Iconify icons. Removed old nav.md and replaced with modular navigation data and guide. Refined ZakoZakoCraft documentation, contributor list, and README structure for clarity and improved presentation. Added rseditor app embed page.

--- a/docs/ZakoZakoCraft/1.从此处开始/3.常见问题.md
+++ b/docs/ZakoZakoCraft/1.从此处开始/3.常见问题.md
@@ -5,33 +5,33 @@ permalink: /ZakoZakoCraft/faq/
 ---
 
 ::: warning 重要提醒
-服主并非您的私人助理，没有义务逐一解答所有问题，请优先查阅本文档寻找答案。服主通常不会直接回应游戏内的"服主为什么"、"服主过来一下"等简单询问。遇到问题时，请先尝试自行解决，或向其他玩家请教是否遇到过类似情况。只有在确实无法解决的情况下，才向服主寻求帮助。
+==服主==并非您的==私人助理==，没有义务逐一解答所有问题，请优先查阅本文档寻找答案。服主通常不会直接回应游戏内的"服主为什么..."、"服主过来一下"等简单询问。遇到问题时，请先尝试==自行解决==，或向==其他玩家==请教是否遇到过类似情况。只有在确实无法解决的情况下，才向服主寻求帮助。
 :::
 
 ## 注册与登录
 
-::: details Q：审核文档是必须填写的吗？
-A：不是，加入机制有`审核制`和`邀请制`两种方式，邀请者需要对被邀请者所做出的不当行为负责。
+::: details Q：==审核文档==是必须填写的吗？
+A：不是，加入机制有`审核制`和`邀请制`两种方式，==邀请者==需要对==被邀请者==所做出的==不当行为==负责。
 :::
 
 ::: details Q：服务器整合包中有什么内容？
-A：包含生电全家桶、元素周期表、各种优化模组，以及提升游戏体验、与服务器功能联动的模组（非必装）。
+A：包含生电全家桶、元素周期表、各种优化模组，以及==提升游戏体验、与服务器功能联动==的模组（非必装）。
 :::
 
-::: details Q：优先与备用路线有什么区别？
-A：优先路线延迟更低，负载能力更强，但在少部分地区可能无法使用（属于正常现象）。
+::: details Q：不同的==路线==有什么区别？
+A：由于==流量晚高峰==可能会导致==延迟==增加（属于==正常现象==），所以==服务器==提供了多个==线路==以解决这个问题。
 :::
 
-::: details Q：用于绑定的邮箱能使用其他邮箱吗？
-A：不行，强制使用`数字QQ邮箱`，目的是更好地追踪玩家的行为（例如查处违规行为），以及防止恶意机器人账号。
+::: details Q：用于==绑定==的==邮箱==能使用其他==邮箱==吗？
+A：不行，强制使用`==数字QQ邮箱==`，目的是更好地追踪==玩家==的==行为==（例如查处==违规行为==），以及防止==恶意机器人账号==。
 :::
 
 ::: details Q：绑定时不小心输入了错误的邮箱怎么办？
-A：退出服务器等待10分钟再重试即可，服务器会自动注销未注册成功的账号。
+A：退出服务器等待10分钟再重试即可，服务器会==自动注销未注册成功的账号==。
 :::
 
-::: details Q：忘记密码了怎么办？
-A：使用绑定的邮箱，按照输入错误密码后的指示进行重置密码即可。
+::: details Q：==忘记密码==了怎么办？
+A：使用==绑定==的==邮箱==，按照输入==错误密码==后的指示进行==重置密码==即可。
 :::
 
 ::: details Q：我想更换绑定的邮箱该如何做？
@@ -55,88 +55,88 @@ A：可以通过以下几种方式获取金币：
 - 向其他玩家出售劳动力（黑奴？）
 :::
 
-::: details Q：服务器会开放假人（假玩家）吗？
-A：暂时不考虑。
+::: details Q：==服务器==会开放==假人==（==假玩家==）吗？
+A：以后会不考虑。
 :::
 
-::: details Q：为什么有些跨区块的地方出现断崖？
-A：这是服务器更新的残留现象，属于正常情况，无需担心。
+::: details Q：为什么有些==跨区块==的地方出现==断崖==？
+A：这是==服务器更新==的==残留现象==，属于==正常情况==，无需担心。
 :::
 
-::: details Q：生存服会删档吗？
-A：不会删档，但会定期清理玩家加载时长不超过5分钟的区块（对玩家活动无影响）。
+::: details Q：==生存服==会==删档==吗？
+A：不会==删档==，但会定期清理==玩家====加载时长==不超过5分钟的==区块==（对==玩家活动==无影响）。
 :::
 
 ::: details Q：服务器可以使用哪些类型的模组？
-A：可以使用优化视觉、性能或便捷性的模组。不过服务器目前只对投影打印机、轻松放置以及菜单中列出的联动模组提供技术支持，其他类型的模组不给予支持，请勿反馈相关问题。
+A：可以使用优化视觉、性能或便捷性的模组。不过服务器目前只对==投影打印机、轻松放置==以及菜单中列出的==联动模组==提供技术支持，其他类型的模组不给予支持，请勿反馈相关问题。
 :::
 
-::: details Q：我应该如何与其他玩家相处？
-A：可以根据个人喜好选择独居或是群居，这将影响到你的生存体验。但不论选择哪种模式，请务必与其他玩家和谐相处，避免产生冲突。
+::: details Q：我应该如何与==其他玩家==相处？
+A：可以根据==个人喜好==选择==独居==或是==群居==，这将影响到你的==生存体验==。但不论选择哪种==模式==，请务必与==其他玩家====和谐相处==，避免产生==冲突==。
 :::
 
-::: details Q：如何创建和管理我的领地？
-A：使用`/dominion`指令可以打开领地系统界面，通过图形界面可以轻松创建和管理领地。详细信息请查看[领地系统](/ZakoZakoCraft/2.休闲生存服/1.领地系统.html)文档。
+::: details Q：如何创建和管理我的==领地==？
+A：使用`/dominion`==指令==可以打开==领地系统==界面，通过==图形界面==可以轻松创建和管理==领地==。==详细信息==请查看[==领地系统==](/ZakoZakoCraft/2.休闲生存服/1.领地系统.html)==文档==。
 :::
 
-::: details Q：其他玩家可以破坏或拿走我领地里的东西吗？
-A：不可以。一旦你建立了领地，只有你和你授权的玩家才能在领地内进行破坏和拿取物品等操作。
+::: details Q：==其他玩家==可以==破坏==或==拿走==我==领地==里的==东西==吗？
+A：不可以。一旦你建立了==领地==，只有你和你==授权==的==玩家==才能在==领地==内进行==破坏==和==拿取物品==等==操作==。
 :::
 
-::: details Q：领地可以设置哪些权限？
-A：你可以设置多种权限，包括但不限于：放置方块、破坏方块、使用门和按钮、攻击生物、使用容器等。在领地管理界面中可以详细配置。
+::: details Q：==领地==可以设置哪些==权限==？
+A：你可以设置多种==权限==，包括但不限于：==放置方块==、==破坏方块==、==使用门==和==按钮==、==攻击生物==、==使用容器==等。在==领地管理界面==中可以==详细配置==。
 :::
 
-::: details Q：我可以拥有多个领地吗？
-A：可以，但需要消耗相应的资源来创建和维护多个领地。具体限制请查看领地系统文档。
+::: details Q：我可以拥有多个==领地==吗？
+A：可以，但需要消耗相应的==资源==来创建和维护多个==领地==。==具体限制==请查看==领地系统==文档。
 :::
 
-::: details Q：如何查看我的金币余额？
-A：使用`/balance`指令可以查看你的金币余额，也可以在菜单中查看。
+::: details Q：如何查看我的==金币余额==？
+A：使用`/balance`==指令==可以查看你的==金币余额==，也可以在==菜单==中查看。
 :::
 
-::: details Q：如何向其他玩家转账？
-A：使用`/pay <玩家名> <金额>`指令可以向指定玩家转账。
+::: details Q：如何向==其他玩家==转账？
+A：使用`/pay <玩家名> <金额>`==指令==可以向==指定玩家==转账。
 :::
 
-::: details Q：玩家市场如何使用？
-A：使用`/ah`指令可以打开玩家市场，在这里你可以出售物品或购买其他玩家的物品。每次最多可以上架20件商品，收取3%的手续费（最低2金币）。
+::: details Q：==玩家市场==如何使用？
+A：使用`/ah`==指令==可以打开==玩家市场==，在==这里==你可以出售==物品==或购买==其他玩家==的==物品==。每次最多可以上架20件==商品==，收取3%的==手续费==（最低2==金币==）。
 :::
 
-::: details Q：系统商店的商品价格会变化吗？
-A：会的，系统商店采用动态定价机制，价格会根据市场供需关系波动。
+::: details Q：==系统商店==的==商品价格==会变化吗？
+A：会的，==系统商店==采用==动态定价机制==，==价格==会根据==市场供需关系==波动。
 :::
 
-::: details Q：如何创建公会？
-A：使用`/guild create <公会名称>`指令可以创建一个新的公会，也可以通过个人设置菜单的图形界面操作。
+::: details Q：如何创建==公会==？
+A：使用`/guild create <公会名称>`==指令==可以创建一个==新的公会==，也可以通过==个人设置菜单==的==图形界面==操作。
 :::
 
-::: details Q：如何加入一个已有的公会？
-A：你需要获得公会成员的邀请，然后使用`/guild accept <公会名称>`接受邀请。
+::: details Q：如何加入一个==已有==的==公会==？
+A：你需要获得==公会成员==的==邀请==，然后使用`/guild accept <公会名称>`==接受邀请==。
 :::
 
-::: details Q：公会成员之间有什么特权？
-A：公会成员可以共享特定的权限，参与公会活动和公会战，使用公会商城等功能。
+::: details Q：==公会成员==之间有什么==特权==？
+A：==公会成员==可以共享==特定==的==权限==，参与==公会活动==和==公会战==，使用==公会商城==等功能。
 :::
 
 ::: details Q：我可以同时属于多个公会吗？
 A：不可以，每个玩家只能属于一个公会。
 :::
 
-::: details Q：我可以使用飞行功能吗？
-A：可以，使用`/flyc`指令可以用经验和金币兑换飞行时间。注意飞行时要关注能量剩余，避免高空坠落。
+::: details Q：我可以使用==飞行功能==吗？
+A：可以，使用`/flyc`==指令==可以用==经验==和==金币==兑换==飞行时间==。注意==飞行==时要关注==能量剩余==，避免==高空坠落==。
 :::
 
-::: details Q：服务器支持哪些红石机制（生电机制）？
-A：服务器支持大部分原版红石机制，包括TNT复制、重力方块复制、无头活塞等。详细信息请查看服务器公开配置项。
+::: details Q：==服务器==支持哪些==红石机制==（==生电机制==）？
+A：==服务器==支持大部分==原版红石机制==，包括==TNT复制==、==重力方块复制==、==无头活塞==等。==详细信息==请查看==服务器公开配置项==。
 :::
 
-::: details Q：如何获得更好的游戏性能？
-A：建议使用服务器提供的整合包，其中包含了优化模组。同时，可以使用服务器联动功能。
+::: details Q：如何获得更好的==游戏性能==？
+A：建议使用==服务器==提供的==整合包==，其中包含了==优化模组==。同时，可以使用==服务器联动功能==。
 :::
 
-::: details Q：如何获得更远的视距？
-A：服务器目前提供的视距比同类型的服务器更远，并且保证游玩体验，如果你有更远的视距需求可以考虑安装[区块缓存模组](https://modrinth.com/mod/bobby)来实现。
+::: details Q：如何获得更远的==视距==？
+A：==服务器==目前提供的==视距==比同类型的==服务器==更远，并且保证==游玩体验==，如果你有更远的==视距==需求可以考虑安装[==区块缓存模组==](https://modrinth.com/mod/bobby)来实现。
 :::
 
 ::: details Q：生存服务器有哪些公开的信息？
@@ -158,6 +158,6 @@ A：以下是服务器的公开配置项：
 
 ---
 
-::: tip 其它疑问
-如有其他疑问请在群聊中询问，或者查看服务器规则文档。
+::: tip ==其它疑问==
+如有==其他疑问==请在==群聊==中询问，或者查看==服务器规则==文档。
 :::
