--- a/docs/ZakoZakoCraft/1.从此处开始/4.名人堂.md
+++ b/docs/ZakoZakoCraft/1.从此处开始/4.名人堂.md
@@ -12,12 +12,12 @@ permalink: /ZakoZakoCraft/Contributors/
 
 ## 贡献者（按时间顺序排列）
 
-| 贡献者 | 贡献内容 | 附加信息 | 留言 |
-|--------|----------|----------|------|
-| ZXBHELLO | 服务器服主 | 承担服务器主要资金、运维、开发、管理工作 | 目前服务器仅由本人独自管理，为爱发电 |
-| 糖君 | 服务器顾问 | 核心技术支持，遇到问题可优先咨询 | - |
-| Pine | 玩法建议/改进提案 | 另一公益服服主，经常与ZXBHELLO探讨技术问题 | - |
-| 水人 | 资金赞助（9R） | 原YMY服务器玩家，现带领众多玩家迁移至本服 | - |
+| 贡献者 | 贡献内容 | 附加信息 |
+|--------|----------|----------|
+| ZXBHELLO | 服务器服主 | 承担服务器主要资金、运维、开发、管理工作 |
+| 糖君 | 服务器顾问 | 核心技术支持，遇到问题可优先咨询 |
+| Pine | 提供穿透服务 | 另一公益服服主，经常与ZXBHELLO探讨技术问题 |
+| 水人 | 资金赞助（9R） | 原YMY服务器玩家，现带领众多玩家迁移至本服 |
 
 ---
 
