Refactor docs structure and update navigation
Renamed and reorganized documentation files for Carpet, MCMMO, and ZakoZakoCraft to use more readable and consistent folder names. Updated collections.ts to match new paths and improved navigation labels. Added a new ZakoZakoCraft getting-started guide and enhanced README navigation cards. Minor content update in ZakoZakoCraft FAQ.

--- a/docs/ZakoZakoCraft/从此处开始/常见问题.md
+++ b/docs/ZakoZakoCraft/从此处开始/常见问题.md
@@ -154,8 +154,14 @@ A：以下是服务器的公开配置项：
 - 启用剪刀反转方块方向
 - 启用跨线程伤害追踪（实验性）
 - 地图种子（使用`/seed`获取）
-:::
-
+- 服务器数据包:
+  - 1
+  - 2
+  - 3
+  - 4
+  - 5
+  - 6
+     
 ---
 
 ::: tip ==其它疑问==
