--- a/docs/ZakoZakoCraft/测试功能/通过虚拟局域网加入服务器.md
+++ b/docs/ZakoZakoCraft/测试功能/通过虚拟局域网加入服务器.md
@@ -1,7 +1,45 @@
 ---
 title: 通过虚拟局域网加入服务器
-createTime: 2025/11/08 21:55:24
+createTime: 2025/11/15 21:55:24
 permalink: /ZakoZakoCraft/VLAN-Server-Connect/
+copyright:
+  creation: original
+  license: CC-BY-NC-SA-4.0
+  author:
+    name: Pine
+    url: https://www.p1ne.top/
 ---
 
-待写入...
+::: info 提示
+通过此方式加入服务器仍为测试阶段，且操作对电脑熟练度要求较高。
+:::
+
+##前言
+
+::: 点击展开
+想用这种方式主要是还是因为国内部分地区家宽很难申请公网ip，在没有公网ip的情况下无法直接连接服务器，这就必定会用到内网穿透之类的。一是不管是使用现成的商业化内网穿透服务还是自己买服务器自建节点对于公益服来说都是一笔费用，二是对于规模稍大点的服务器内网穿透的流量以及带宽可能是不够用的。同时各大主流启动器为了普通玩家联机方便也在使用ET的核心，如果能够更加无感的使用启动器内置的ET模块，那连专用的客户端都不用下。在这个背景下EasyTier这种p2p组网就有相当可用性和一定优势了。只是目前启动器使用了自己的协议，除非主动写一个客户端兼容他的协议目前应该没有办法使用启动器自带的核心，且无法保证每次联机的编码相同。除了上述提到的仍存在一些问题，比如跨网连接质量差等。但总的来说通过这种虚拟局域网的方式我认为比较有前景（特别在节省成本上），而且关于跨网连接的问题实际上可以通过三线来缓解，不管怎么说都在合理的预算中达到了最高的规格。
+:::
+
+##如何加入？
+
+::: steps
+
+1. 下载EasyTierGame[^脚注1]
+
+   由于原发布地址位于[Github](https://github.com/EasyTier/EasytierGame/releases)，所以这里我放上加速[下载连接](https://ghfast.top/https://github.com/EasyTier/EasytierGame/releases/download/1.5.2/easytier-game_windows_x86_64_1.5.2.zip)
+   
+
+2. 配置参数
+
+   将软件打开后在房间名处输入服务器提供的节点、房间号和密码（在群里公告），设置自己加入网络的主机名称。
+
+3. 点击启动联机
+
+   点击后看到左上角图标变成**联机成功**既加入网络成功。
+
+4. 加入服务器
+
+   剩下的就跟正常进服务器一样了，在服务器地址填上服务器在虚拟局域网里的地址（群公告）即可。
+   
+:::
+[^脚注1]: 正常版本的EasyTierGame不兼容win7，如需使用请自行到发布页下载修复版本。
