修复小毛病

--- a/docs/ZakoZakoCraft/测试功能/通过虚拟局域网加入服务器.md
+++ b/docs/ZakoZakoCraft/测试功能/通过虚拟局域网加入服务器.md
@@ -26,18 +26,18 @@ copyright:
 
 1. 下载EasyTierGame[^脚注1]
 
-   由于原发布地址位于[Github](https://github.com/EasyTier/EasytierGame/releases)，所以这里我放上加速[下载连接](https://ghfast.top/https://github.com/EasyTier/EasytierGame/releases/download/1.5.2/easytier-game_windows_x86_64_1.5.2.zip)
-   
+   由于原发布地址位于[Github](https://github.com/EasyTier/EasytierGame/releases)，所以这里我放上加速[下载连接](https://ghfast.top/https://github.com/EasyTier/EasytierGame/releases/download/1.5.2/easytier-game_windows_x86_64_1.5.2.zip)。
+   下载后将其解压。
 
-2. 配置参数
+3. 配置参数
 
    将软件打开后在房间名处输入服务器提供的节点、房间号和密码（在群里公告），设置自己加入网络的主机名称。
 
-3. 点击启动联机
+4. 点击启动联机
 
    点击后看到左上角图标变成**联机成功**既加入网络成功。
 
-4. 加入服务器
+5. 加入服务器
 
    剩下的就跟正常进服务器一样了，在服务器地址填上服务器在虚拟局域网里的地址（群公告）即可。
    
