docs(ZakoZakoCraft): 更新虚拟局域网联机教程文档
- 将提示信息从 info 类型更改为 warning 类型
- 重写前言部分，优化表述逻辑和语言表达
- 重新组织"如何加入"部分的结构，使用分级标题替代步骤列表
- 更新下载链接描述和软件操作说明
- 优化文档格式和标点符号使用
- 修正脚注格式和内容表述

--- a/docs/ZakoZakoCraft/测试功能/通过虚拟局域网加入服务器.md
+++ b/docs/ZakoZakoCraft/测试功能/通过虚拟局域网加入服务器.md
@@ -10,36 +10,47 @@ copyright:
     url: https://www.p1ne.top/
 ---
 
-::: info 提示
+::: warning 提示
 通过此方式加入服务器仍为测试阶段，且操作对电脑熟练度要求较高。
 :::
 
 ## 前言
 
 ::: details 点击展开
-想用这种方式主要是还是因为国内部分地区家宽很难申请公网ip，在没有公网ip的情况下无法直接连接服务器，这就必定会用到内网穿透之类的。一是不管是使用现成的商业化内网穿透服务还是自己买服务器自建节点对于公益服来说都是一笔费用，二是对于规模稍大点的服务器内网穿透的流量以及带宽可能是不够用的。同时各大主流启动器为了普通玩家联机方便也在使用ET的核心，如果能够更加无感的使用启动器内置的ET模块，那连专用的客户端都不用下。在这个背景下EasyTier这种p2p组网就有相当可用性和一定优势了。只是目前启动器使用了自己的协议，除非主动写一个客户端兼容他的协议目前应该没有办法使用启动器自带的核心，且无法保证每次联机的编码相同。除了上述提到的仍存在一些问题，比如跨网连接质量差等。但总的来说通过这种虚拟局域网的方式我认为比较有前景（特别在节省成本上），而且关于跨网连接的问题实际上可以通过三线来缓解，不管怎么说都在合理的预算中达到了最高的规格。
+
+选择这种方式的主要原因在于，国内部分地区家庭宽带很难申请到公网 IP。在没有公网 IP 的情况下，无法直接连接服务器，这时就必须要借助内网穿透等技术。
+
+然而，无论是使用现成的商业化内网穿透服务，还是自己购买服务器自建节点，对于公益服务器来说都是一笔不小的开销。此外，对于规模稍大的服务器而言，内网穿透所提供的流量和带宽可能难以满足需求。
+
+与此同时，各大主流启动器为了方便普通玩家联机，也纷纷采用了 ET（EasyTier）的核心技术。如果能更无缝地使用启动器内置的 ET 模块，甚至连专用客户端都可以省去下载。
+
+正是在这样的背景下，EasyTier 这种 P2P 组网方案展现出了相当的可用性和独特优势。不过目前启动器使用了自有的协议，除非专门开发一个兼容该协议的客户端，否则暂时无法直接使用启动器自带的核心功能，同时也无法确保每次联机会生成相同的编码。
+
+除了上述问题之外，还存在例如跨网络连接质量不佳等情况。但总体而言，通过虚拟局域网的方式来连接服务器具有良好的前景，特别是在节约成本方面表现突出。至于跨网连接的质量问题，实际上可以通过多线路部署来有效缓解，无论如何都能在合理的预算范围内达到最优的规格标准。
+
 :::
 
 ## 如何加入？
 
 ::: steps
 
-1. 下载EasyTierGame[^脚注1]
+### 1. 下载 EasyTierGame[^脚注1]
 
-   由于原发布地址位于[Github](https://github.com/EasyTier/EasytierGame/releases)，所以这里我放上加速[下载连接](https://ghfast.top/https://github.com/EasyTier/EasytierGame/releases/download/1.5.2/easytier-game_windows_x86_64_1.5.2.zip)。
-   下载后将其解压。
+由于原发布地址位于 [Github](https://github.com/EasyTier/EasytierGame/releases)，所以这里我放上加速 [下载链接](https://ghfast.top/https://github.com/EasyTier/EasytierGame/releases/download/1.5.2/easytier-game_windows_x86_64_1.5.2.zip)。
+下载后将其解压。
 
-3. 配置参数
+### 2. 配置参数
 
-   将软件打开后在房间名处输入服务器提供的节点、房间号和密码（在群里公告），设置自己加入网络的主机名称。
+将软件打开后在房间名处输入服务器提供的节点、房间号和密码（在群里公告），设置自己加入网络的主机名称。
 
-4. 点击启动联机
+### 3. 启动联机
 
-   点击后看到左上角图标变成**联机成功**既加入网络成功。
+点击启动按钮，看到左上角图标变成 **"联机成功"** 既表示已成功加入网络。
 
-5. 加入服务器
+### 4. 连接服务器
 
-   剩下的就跟正常进服务器一样了，在服务器地址填上服务器在虚拟局域网里的地址（群公告）即可。
-   
+剩下的就跟正常进服务器一样了，在服务器地址填上服务器在虚拟局域网里的地址（群公告）即可。
+
 :::
-[^脚注1]: 正常版本的EasyTierGame不兼容win7，如需使用请自行到发布页下载修复版本。
+
+[^脚注1]: 正常版本的 EasyTierGame 不兼容 Win7，如需使用请自行到发布页下载修复版本。
