--- a/docs/ZakoZakoCraft/休闲生存服/经济功能.md
+++ b/docs/ZakoZakoCraft/休闲生存服/经济功能.md
@@ -12,14 +12,14 @@ permalink: /ZakoZakoCraft/function/economy/
 
 | 类别 | 功能 | 指令 | 说明 |
 |------|------|------|------|
-| 通用指令 | 查询余额 | `/balance [玩家名]` | 查询玩家的金币数量 |
-| 通用指令 | 转移金币 | `/pay <玩家名> <金额>` | 向玩家支付金币 |
-| 通用指令 | 福布斯榜 | `/baltop` | 生存服金币排行榜 |
-| 交易渠道 | 玩家交易 | `/trade` | 玩家间进行经验/金币/物品交易GUI |
+| 通用指令 | 查询余额 | `/balance [玩家名]` | 查询玩家的杂鱼币数量 |
+| 通用指令 | 转移金额 | `/pay <玩家名> <金额>` | 向玩家支付 |
+| 通用指令 | 福布斯榜 | `/baltop` | 杂鱼币排行榜 |
+| 交易渠道 | 玩家交易 | `/trade` | 玩家间进行经验/杂鱼币/物品交易GUI |
 | 交易渠道 | 系统商店 | `/shop` | 官方商店，动态定价，价格随市场波动 |
 | 交易渠道 | 头颅商店 | `/hdb` | 出售装饰性头颅，用于建筑装饰 |
 | 交易渠道 | 快速出售 | `/sellgui` | 一键出售物品给系统，价格参考系统商店 |
-| 任务系统 | 收集任务 | `/collections` | 完成任务获取金币，内置排行榜 |
+| 任务系统 | 收集任务 | `/collections` | 完成任务获取杂鱼币，内置排行榜 |
 
 ## 注意事项
 
