feat(blog): 更新博客配置并集成 Waline 评论系统
- 将博客标题从 'article' 更改为 '博客'
- 删除 ZakoZakoCraft 集合中的 '名人堂' 页面
- 调整 collections 导出顺序，将 blog 移至末尾
- 更新 iconify 脚本加载配置，设置 async 为布尔值
- 启用 SEO 和 sitemap 功能，配置更新频率和优先级
- 将评论系统从 Giscus 切换为 Waline，配置相关参数
- 添加 @waline/client 依赖并更新 lock 文件
- 调整常见问题页面的 permalink 路径
- 移除服务器名人堂文档页面
- 类型断言 config 对象为 any 以兼容插件配置

--- a/docs/ZakoZakoCraft/从此处开始/常见问题.md
+++ b/docs/ZakoZakoCraft/从此处开始/常见问题.md
@@ -1,7 +1,7 @@
 ---
 title: 常见问题
 createTime: 2025/11/28 23:18:36
-permalink: /ZakoZakoCraft/从此处开始/0yv8k0bl/
+permalink: /ZakoZakoCraft/faq/
 ---
 
 ::: warning 重要提醒
