--- a/docs/ZakoZakoCraft/休闲生存服/实用功能.md
+++ b/docs/ZakoZakoCraft/休闲生存服/实用功能.md
@@ -10,13 +10,13 @@ permalink: /ZakoZakoCraft/function/services/
 以下指令参数 \<> 表示必填项，[] 表示选填项。
 :::
 
-| 类别 | 功能 | 指令/获取方式 | 说明 |
-|------|------|---------------|------|
-| 基础服务 | 帮助指南 | 菜单 | 访问当前网页，含完整规则，新玩家必读 |
-| 基础服务 | 查询模式 | `/co i` | 查看方块操作记录，解决纠纷专用 |
-| 飞行与经验 | 能量飞行 | `/flyc` | 用经验或金币兑换飞行时间 |
-| 工具与配方 | 便携工具箱 | 系统商店购买权限 | 含小创世神、便携工作台、镜像仿制 |
-| 工具与配方 | 特殊配方 | 无指令 | 服务器独家合成配方，仅本服生效 |
+| 类别       | 功能       | 指令/获取方式    | 说明                                 |
+| ---------- | ---------- | ---------------- | ------------------------------------ |
+| 基础服务   | 帮助指南   | 菜单             | 访问当前网页，含完整规则，新玩家必读 |
+| 基础服务   | 查询模式   | `/co i`          | 查看方块操作记录，解决纠纷专用       |
+| 飞行与经验 | 能量飞行   | 菜单             | 用矿物或杂鱼币兑换飞行时间           |
+| 工具与配方 | 便携工具箱 | 系统商店购买权限 | 含小创世神、便携工作台、镜像仿制     |
+| 工具与配方 | 特殊配方   | 无指令           | 服务器独家合成配方，仅本服生效       |
 
 ## 注意事项
 
